--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "html-to-text": "^9.0.5",
     "next": "13.4.4",
+    "next-auth": "^0.0.0-pr.6777.c5550344",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-quill": "^2.0.0",
+    "sweetalert": "^2.1.2",
+    "tailwindcss": "3.3.2",
+    "uuid": "^9.0.0"
+  },
+  "exports": {
+    "./dist/node/axios.cjs": "./dist/node/axios.cjs"
   }
 }
