--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ NEXT_PUBLIC_API_URL="https://mailtracker-api.vercel.app"
 GOOGLE_CLIENT_SECRET="839033016423-49c52qj7r6rvv8m9s0d2uauhik34u62q.apps.googleusercontent.com"
 GOOGLE_CLIENT_ID="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"
 NEXTAUTH_SECRET="baf4cf3d711153e29959e94024d6eaa5"
-NEXTAUTH_URL="hhttps://mailtracker-free.vercel.app"
+NEXTAUTH_URL="https://mailtracker-free.vercel.app"
