--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_API_URL="https://mailtracker-api.vercel.app"
-GOOGLE_CLIENT_SECRET="839033016423-49c52qj7r6rvv8m9s0d2uauhik34u62q.apps.googleusercontent.com"
-GOOGLE_CLIENT_ID="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"
+GOOGLE_CLIENT_SECRET="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"
+GOOGLE_CLIENT_ID="839033016423-0vamlna01i9ro6so3k0m7tvuaaq4009k.apps.googleusercontent.com"
 NEXTAUTH_SECRET="baf4cf3d711153e29959e94024d6eaa5"
 NEXTAUTH_URL="https://mailtracker-free.vercel.app"
